2001-12-18  Bradford Hovinen  <hovinen@ximian.com>

	* background.schema: Update keys to use /desktop/gnome/background

	* background-properties-capplet.c (property_change_cb): Remove
	(create_dialog): Return GladeXML, not GtkWidget
	(setup_dialog): Put GladeXML in the signature rather than
	GtkWidget
	(peditor_value_changed): Retrieve color_frame directory rather
	than through Glade
	(real_realize_cb): Ditto
	(setup_dialog): Set color-frame rather than glade-data
	(main): Construct the preview applier here rather than in
	create_dialog
	(main): Unref the applier object when the dialog is destroyed
	(setup_dialog, create_dialog): Put the applier in the signature
	Use weak_ref rather than the destroy signal for all relevant
	objects
	Update GConf keys to use /desktop/gnome/background

2001-12-17  Bradford Hovinen  <hovinen@ximian.com>

	* background.desktop.in.in (Exec): Update

	* background-properties-capplet.c (setup_dialog): Don't hide
	opacity controls
	(dialog_button_clicked_cb): Apply settings after commiting the
	change set
	(peditor_value_changed): Implement
	(setup_dialog): Connect value-changed signals
	(setup_dialog): Store the applier in the preferences object
	(peditor_value_changed): Retrieve the applier from the preferences
	object and use it to apply settings on the preview widget
	(setup_dialog): Connect missing signal
	(setup_dialog): Enabled set_guard call
	(peditor_value_changed): Set the sensitivity of the color frame
	depending on the settings
	(peditor_value_changed): Use correct keys

	* background.schema: Added wallpaper-enabled

	* background-properties-capplet.c (create_dialog): Use
	prefs_widget rather than preview placeholder widget

2001-12-07  Bradford Hovinen  <hovinen@ximian.com>

	* background.schema: Fix default values

	* background-properties-capplet.c (main): Connect the destroy
	signal

	* background.schema: Fix type on opacity schema

	* background-properties-capplet.c (main): Remove use of