@@ -1,5 +1,10 @@
 2001-12-18  Bradford Hovinen  <hovinen@ximian.com>
 
+	* background-properties-capplet.c: Use gconf_client rather than
+	gconf_engine
+	(setup_dialog): Use correct path for enabled
+	(main): Preload the background settings directory for performance
+
 	* background.schema: Update keys to use /desktop/gnome/background
 
 	* background-properties-capplet.c (property_change_cb): Remove
